# SilverGuard

./: .gitignore  README.md  main.py  requirements.txt
config/: settings.py
data/: scam_scenarios.json
rp-voice-detector/: README.md  requirements.txt
rp-voice-detector/configs/: config.yaml  pulse_audio.yaml
rp-voice-detector/docker/: Dockerfile.pi
rp-voice-detector/docs/: COMPONENTS.md  HARDWARE.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
rp-voice-detector/scripts/: calibrate_mic.sh  install_deps.sh  setup_systemd.sh
rp-voice-detector/src/: cli.py  daemon.py  main.py
rp-voice-detector/src/audio/: calibrate.py  (+2 more)
rp-voice-detector/systemd/: rp-voice-detector.service
rp-voice-detector/tests/: test_audio.py  test_detection.py
rpi-voice-detect/: Dockerfile.rpi  README.md  pyproject.toml  requirements-dev.txt
rpi-voice-detect/configs/: microphone.yaml  model.yaml
rpi-voice-detect/docs/: README.md  hardware-setup.md  installation.md  usage.md
rpi-voice-detect/models/: README.md
rpi-voice-detect/scripts/: install-deps.sh  setup-pi.sh  start.sh
rpi-voice-detect/src/: cli.py  main.py
rpi-voice-detect/src/audio/: mic_calibration.py  preprocess.py  recorder.py  vad.py
rpi-voice-detect/src/config/: default.yaml
rpi-voice-detect/src/detection/: inference.py  model.py  postprocess.py
rpi-voice-detect/src/hardware/: gpio_controller.py  i2s_driver.py
rpi-voice-detect/src/services/: http_api.py  logger.py  mqtt_client.py
rpi-voice-detect/tests/: test_inference.py  test_recorder.py  test_vad.py
src/: __init__.py  game.py  scam_detector.py  ui.py
(+9 files in other folders)
