[tool]
name = "rpi-voice-detect"
version = "0.1.0"
description = "A voice detection project for Raspberry Pi, designed for real-time audio processing and detection."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
pyaudio = "^0.2.11"
numpy = "^1.21.0"
scipy = "^1.7.0"
vosk = "^0.3.30"
porcupine = "^1.10.0"
pyttsx3 = "^2.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
rpi-voice-detect = "src.main:main"